--- a/docker/rdbms/mariadb/docker/windows/10/my.ini
+++ b/docker/rdbms/mariadb/docker/windows/10/my.ini
@@ -2,5 +2,9 @@
 # set basedir to your installation path
 basedir=C:\Program Files\MariaDB\10\
 datadir=C:\ProgramData\MariaDB\10\data
+# Cannot get this to be picked up via the IncludeDir Mechansim - Permisive Permission Issue ?
+!includedir C:\ProgramData\MariaDB\10\conf.d\
+
 [mariadb]
 log_error=MariaDB.err
+
