--- a/docker/rdbms/mariadb/docker/windows/10/dockerfile
+++ b/docker/rdbms/mariadb/docker/windows/10/dockerfile
@@ -1,5 +1,6 @@
 # escape=`
 FROM yadamu/svr-2019:vs22
+WORKDIR c:/
 #
 ADD http://mirrors.accretive-networks.net/mariadb//mariadb-10.6.4/winx64-packages/mariadb-10.6.4-winx64.zip .
 ADD https://cdn.mysql.com//Downloads/MySQL-Shell/mysql-shell-8.0.26-windows-x86-64bit.zip .
@@ -13,12 +14,11 @@ RUN Expand-Archive -Path C:\mariadb-10.6.4-winx64.zip  -destinationPath """C:\Pr
     [Environment]::SetEnvironmentVariable("""Path""", """C:\Program Files\MariaDB\10\bin;C:\Program Files\MySQL\8.0\Shell\bin;""" +  $env:Path,"""Machine"""); 
 #
 COPY my.ini c:/windows
-RUN New-Item -ItemType directory -path """C:\ProgramData\MariaDB\10\data"""
 #
 # Defer creation of instance to Start.ps1. This allows volumes and hostnames to be assigned using "Docker RUN" or "Docker-Compose"
 #
-WORKDIR c:/
 COPY Start.ps1 .
+Copy utf-8.cnf C:/ProgramData/MariaDB/10/
 #CMD .\Startup
 ENTRYPOINT ["powershell","c:\\Start.ps1"]
 #ENTRYPOINT ["powershell","wait-event"]
