Reworked Docker Configuration Files for Windows QA Environment
Use a Docker Swarm to set up 3 Database Servers plus a separate client

--- a/docker/rdbms/mariadb/docker/windows/10/dockerfile
+++ b/docker/rdbms/mariadb/docker/windows/10/dockerfile
@@ -1,5 +1,5 @@
 # escape=`
-FROM yadamu/svr-2019:vs22
+FROM yadamu/svr:vs22
 WORKDIR c:/
 #
 ADD http://mirrors.accretive-networks.net/mariadb//mariadb-10.6.4/winx64-packages/mariadb-10.6.4-winx64.zip .
