--- a/docker/rdbms/mongodb/docker/windows/05/dockerfile
+++ b/docker/rdbms/mongodb/docker/windows/05/dockerfile
@@ -1,23 +1,12 @@
 # escape=`
-FROM yadamu/svr-2019:vs22
+FROM yadamu/svr:vs22 
 #
 ADD https://fastdl.mongodb.org/windows/mongodb-windows-x86_64-5.0.3-signed.msi .
-#RUN powershell -command msiexec.exe /l*v mdbinstall.log  /qb /i mongodb-windows-x86_64-5.0.3-signed.msi SHOULD_INSTALL_COMPASS="0" 
-RUN start-process msiexec.exe -Wait -ArgumentList """/l*v""", """mdbinstall.log """, """/qb""", """/i""", """mongodb-windows-x86_64-5.0.3-signed.msi SHOULD_INSTALL_COMPASS=""0"" ADDLOCAL=""ServerService"""""
+RUN start-process msiexec.exe -Wait -ArgumentList "/l*v", "mdbinstall.log", "/qb", "/i", """mongodb-windows-x86_64-5.0.3-signed.msi SHOULD_INSTALL_COMPASS=""0"" ADDLOCAL=""ServerNoService"""""; `
+    Remove-Item mongodb-windows-x86_64-5.0.3-signed.msi; `
+    [Environment]::SetEnvironmentVariable("""Path""", """c:\Program Files\MongoDB\Server\5.0\bin;""" +  $env:Path,"""Machine"""); 
+#
 WORKDIR C:/Program Files/MongoDB/Server/5.0/
-#
-# Stop the Service. Compress and remove the data and log folders. They will be restored in Start.ps1
-# This allows volumes to be assigned using "Docker RUN" or "Docker-Compose"
-#
-RUN Set-Service -Name """MongoDB""" -StartupType """Manual"""; `
-    Stop-Service """MongoDB"""; `
-    Compress-Archive -Path data -DestinationPath data.zip; `
-    Compress-Archive -Path log  -DestinationPath log.zip; `
-	Remove-Item -recurse data; `
-	Remove-Item -recurse log
-#
-# Update Mongo config to use at c:\ProgramData\MongoDB\Server\5.0
-#
 COPY mongod.cfg bin
 #
 WORKDIR c:/
