--- a/docker/rdbms/mssql/docker/windows/2014/dockerfile
+++ b/docker/rdbms/mssql/docker/windows/2014/dockerfile
@@ -1,5 +1,5 @@
 # escape=`
-FROM yadamu/svr-2016:vs22
+FROM yadamu/svr:vs22
 #
 RUN New-Item -ItemType "directory" C:\INSTALL; `
     New-Item -ItemType "directory" C:\INSTALL\CU
@@ -8,44 +8,52 @@ WORKDIR c:/INSTALL
 #
 # Install .NET 3.5SP1 using dism
 #
-copy sxs-server-2016.zip .
-RUN Expand-Archive -Path C:\INSTALL\sxs-server-2016.zip -destinationPath C:\INSTALL; `
+copy sxs-server-2022.zip .
+RUN Expand-Archive -Path C:\INSTALL\sxs-server-2022.zip -destinationPath C:\INSTALL; `
     dism /online /enable-feature /featurename:NetFX3 /all /Source:c:\install\sxs /LimitAccess; `
     Remove-Item -Recurse c:\install\sxs; `
-    Remove-Item C:\INSTALL\sxs-server-2016.zip
+    Remove-Item C:\INSTALL\sxs-server-2022.zip
 #
 # Unpack SQL Server
 #
 COPY SQLServer2014-SP3-DEV-x64-ENU.zip .
-COPY setup.ps1 .
-COPY fixDataFileLocations.sql .
+COPY SQLServer2014-Config.ini .							   
 RUN Expand-Archive -Path "C:\INSTALL\SQLServer2014-SP3-DEV-x64-ENU.zip" -DestinationPath "C:\INSTALL\SQLServer2014-SP3-DEV-x64-ENU"  
 #
 # Install SQL Server
 #
-# RUN C:\INSTALL\SQLServer2014-SP3-DEV-x64-ENU\SETUP.exe /Q /ACTION=INSTALL /FEATURES=SQLENGINE /INSTANCENAME=MSSQLSERVER /SECURITYMODE=SQL /SAPWD="oracle#1" /SQLSVCACCOUNT="NT AUTHORITY\System" /AGTSVCACCOUNT="NT AUTHORITY\System" /SQLSYSADMINACCOUNTS="BUILTIN\Administrators" /IACCEPTSQLSERVERLICENSETERMS=1 /TCPENABLED=1 /UPDATEENABLED=false ; exit 0
-#
-# Invoking Setup from a script appears to bypass the issue with "username" cannot be null issue that occurs when setup is invoked directly via the RUN command 
-#
-RUN .\setup.ps1
-#
-RUN $SQLSERVER = GET-SERVICE "MSSQLSERVER"; `
-	$SQLSERVER.Start(@('/T3608','/T3609')); `
-	invoke-sqlcmd -InputFile fixDataFileLocations.sql -username "sa"; `
-	$SQLSERVER.stop(); `
-	$SQLSERVER.Start
-#
-RUN Remove-Item SQLServer2014-SP3-DEV-x64-ENU.zip; `
-    Remove-Item setup.ps1; `
-    Remove-Item fixDataFileLocations.sql
+RUN C:\INSTALL\SQLServer2014-SP3-DEV-x64-ENU\SETUP.exe  /ConfigurationFile=C:\INSTALL\SQLServer2014-Config.ini		
 #
 WORKDIR c:/
-COPY prepareMounts.ps1 .
-RUN Set-Service  -Name "MSSQLSERVER" -StartupType "Manual"; `
-    Stop-Service -Name "MSSQLSERVER"; `
-    c:\prepareMounts.ps1; `
-    Remove-Item c:\prepareMounts.ps1
-SHELL [ "powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
+#
+RUN  Stop-Service -Name """SQLTELEMETRY"""; `
+     Stop-Service -Name """SQLWRITER"""; `
+	 Set-Service  -Name """SQLTELEMETRY""" -StartupType """Manual"""; `
+     Set-Service  -Name """SQLWRITER""" -StartupType """Manual"""; `
+     Compress-Archive -Path """C:\Program Files\Microsoft SQL Server\MSSQL14.MSSQLSERVER\MSSQL\DATA""" -DestinationPath """C:\Program Files\Microsoft SQL Server\MSSQL14.MSSQLSERVER\MSSQL\Data.zip"""; `
+     Compress-Archive -Path """C:\Program Files\Microsoft SQL Server\MSSQL14.MSSQLSERVER\MSSQL\Log"""  -DestinationPath """C:\Program Files\Microsoft SQL Server\MSSQL14.MSSQLSERVER\MSSQL\Log.zip"""; `
+     Remove-Item -Recurse  """C:\Program Files\Microsoft SQL Server\MSSQL14.MSSQLSERVER\MSSQL\DATA"""; `
+     Remove-Item -Recurse  """C:\Program Files\Microsoft SQL Server\MSSQL14.MSSQLSERVER\MSSQL\Log"""# Invoking Setup from a script appears to bypass the issue with "username" cannot be null issue that occurs when setup is invoked directly via the RUN command 
+#
+RUN .\setup.ps1
+##
+#RUN $SQLSERVER = GET-SERVICE "MSSQLSERVER"; `
+#	$SQLSERVER.Start(@('/T3608','/T3609')); `
+#	invoke-sqlcmd -InputFile fixDataFileLocations.sql -username "sa"; `
+#	$SQLSERVER.stop(); `
+#	$SQLSERVER.Start
+##
+#RUN Remove-Item SQLServer2014-SP3-DEV-x64-ENU.zip; `
+#    Remove-Item setup.ps1; `
+#    Remove-Item fixDataFileLocations.sql
+##
+#WORKDIR c:/
+#COPY prepareMounts.ps1 .
+#RUN Set-Service  -Name "MSSQLSERVER" -StartupType "Manual"; `
+#    Stop-Service -Name "MSSQLSERVER"; `
+#    c:\prepareMounts.ps1; `
+#    Remove-Item c:\prepareMounts.ps1
+#SHELL [ "powershell", "-Command", "$ErrorActionPreference = 'Stop'; $ProgressPreference = 'SilentlyContinue';"]
 COPY Start.ps1 .
 #ENTRYPOINT [ "powershell","c:\\Start.ps1","-ACCEPT_EULA $ENV:ACCEPT_EULA","-SA_PASSWORD $ENV:SA_PASSWORD"]
 ENTRYPOINT powershell "c:\\Start.ps1 -ACCEPT_EULA $ENV:ACCEPT_EULA -SA_PASSWORD $ENV:SA_PASSWORD
