--- a/docker/rdbms/mssql/docker/windows/2019/dockerfile.CU13
+++ b/docker/rdbms/mssql/docker/windows/2019/dockerfile.CU13
@@ -1,5 +1,5 @@
 # escape=`
-FROM yadamu/svr-2019:vs22
+FROM yadamu/svr:vs22
 #
 RUN New-Item -ItemType "directory" C:\INSTALL; `
     New-Item -ItemType "directory" C:\INSTALL\CU
@@ -9,6 +9,7 @@ RUN New-Item -ItemType "directory" C:\INSTALL; `
 WORKDIR c:/INSTALL
 COPY SQLServer2019-DEV-x64-ENU.exe .
 COPY SQLServer2019-DEV-x64-ENU.box .
+COPY SQLServer2019-Config.ini .
 RUN Start-Process .\SQLServer2019-DEV-x64-ENU.exe  -Wait -ArgumentList """/x:SQLServer2019-DEV-x64-ENU""", """/u"""; `
     Remove-Item SQLServer2019-DEV-x64-ENU.exe; `
     Remove-Item SQLServer2019-DEV-x64-ENU.box
@@ -20,15 +21,21 @@ COPY SQLServer2019-KB5005679-x64.exe CU
 #
 # Install SQL Server Applying the Cummlative Update
 #
-RUN C:\INSTALL\SQLServer2019-DEV-x64-ENU\SETUP.exe /Q /ACTION=Install /UPDATEENABLED=TRUE /UpdateSource="C:\INSTALL\CU" /FEATURES=SQLEngine /INSTANCENAME=MSSQLSERVER /SQLSVCACCOUNT='NT AUTHORITY\System' /SQLSYSADMINACCOUNTS='BUILTIN\ADMINISTRATORS' /TCPENABLED=1 /NPENABLED=0 /IACCEPTSQLSERVERLICENSETERMS=1 /SECURITYMODE=SQL /SAPWD="""oracle#1"""
+RUN C:\INSTALL\SQLServer2019-DEV-x64-ENU\SETUP.exe /ConfigurationFile=C:\INSTALL\SQLServer2019-Config.ini; `
+    Remove-Item C:\INSTALL\CU\SQLServer2019-KB5005679-x64; `
+	Remove-Item C:\INSTALL\SQLServer2019-Config.ini
 #
 WORKDIR c:/
-COPY prepareMounts.ps1 .
-RUN Set-Service  -Name """MSSQLSERVER""" -StartupType """Manual"""; `
-    Stop-Service -Name """MSSQLSERVER"""; `
-    c:\prepareMounts.ps1; `
-    Remove-Item c:\prepareMounts.ps1
-#
+#						
+RUN  Stop-Service -Name """SQLTELEMETRY"""; `
+     Stop-Service -Name """SQLWRITER"""; `
+	 Set-Service  -Name """SQLTELEMETRY""" -StartupType """Manual"""; `
+     Set-Service  -Name """SQLWRITER""" -StartupType """Manual"""; `
+     Compress-Archive -Path """C:\Program Files\Microsoft SQL Server\MSSQL15.MSSQLSERVER\MSSQL\DATA""" -DestinationPath """C:\Program Files\Microsoft SQL Server\MSSQL15.MSSQLSERVER\MSSQL\Data.zip"""; `
+     Compress-Archive -Path """C:\Program Files\Microsoft SQL Server\MSSQL15.MSSQLSERVER\MSSQL\Log"""  -DestinationPath """C:\Program Files\Microsoft SQL Server\MSSQL15.MSSQLSERVER\MSSQL\Log.zip"""; `
+     Remove-Item -Recurse  """C:\Program Files\Microsoft SQL Server\MSSQL15.MSSQLSERVER\MSSQL\DATA"""; `
+     Remove-Item -Recurse  """C:\Program Files\Microsoft SQL Server\MSSQL15.MSSQLSERVER\MSSQL\Log"""
+#    
 COPY Start.ps1 .
 #ENTRYPOINT [ "powershell","c:\\Start.ps1","-ACCEPT_EULA $ENV:ACCEPT_EULA","-SA_PASSWORD $ENV:SA_PASSWORD"]
 ENTRYPOINT powershell "c:\\Start.ps1 -ACCEPT_EULA $ENV:ACCEPT_EULA -SA_PASSWORD $ENV:SA_PASSWORD
