--- a/docker/rdbms/mysql/docker/windows/08/dockerfile
+++ b/docker/rdbms/mysql/docker/windows/08/dockerfile
@@ -1,5 +1,5 @@
 # escape=`
-FROM yadamu/svr-2019:vs22
+FROM yadamu/svr:vs22
 #
 ADD https://dev.mysql.com/get/Downloads/MySQL-8.0/mysql-8.0.26-winx64.zip .
 ADD https://cdn.mysql.com//Downloads/MySQL-Shell/mysql-shell-8.0.26-windows-x86-64bit.zip .
@@ -12,7 +12,6 @@ RUN Expand-Archive -Path C:\mysql-8.0.26-winx64.zip -destinationPath """C:\Progr
     [Environment]::SetEnvironmentVariable("""Path""", """C:\Program Files\MySQL\8.0\bin;C:\Program Files\MySQL\8.0\Shell\bin;""" +  $env:Path,"""Machine"""); 
 #
 COPY my.ini c:/windows
-RUN New-Item -ItemType directory -path """C:\ProgramData\MySQL\8.0\data"""
 #
 # Defer creation of instance to Start.ps1. This allows volumes and hostnames to be assigned using "Docker RUN" or "Docker-Compose"
 #
