--- a/docker/rdbms/oracle/docker/windows/19.3/dockerfile
+++ b/docker/rdbms/oracle/docker/windows/19.3/dockerfile
@@ -1,5 +1,5 @@
 # escape=`
-FROM yadamu/svr-2019:vs22
+FROM yadamu/svr:vs22
 #
 # Unpack Oracle RDBMS
 #
@@ -13,16 +13,11 @@ RUN New-Item -ItemType "directory" -Path $env:ORACLE_HOME; `
 # Install Oracle Software
 #
 WORKDIR $ORACLE_HOME
-COPY dbca.rsp .
 COPY setup.rsp $ORACLE_HOME/inventory/Scripts/
 RUN .\setup.exe -silent -responseFile %ORACLE_HOME%/inventory/Scripts/setup.rsp
+COPY dbca.rsp .
 #
-# Compress and remove diag folder. It will be restored in Start.ps1
-#
-RUN Compress-Archive -Path c:\oracle\diag  -DestinationPath c:\oracle\diag.zip; `
-    Remove-Item -Recurse c:\oracle\diag
-#
-# Defer execution of NETCA and DBCA to Start.ps1. This allows volumes and hostnames to be assigned using "Docker RUN" or "Docker-Compose"
+# Execution of NETCA and DBCA deferred to Start.ps1. This allows volumes and hostnames to be assigned using "Docker RUN" or "Docker-Compose"
 #
 WORKDIR c:/
 COPY Start.ps1 .
