Assorted Minor Bug Fixes and Enhancements
Fixed #166
Fixed #165
Fixed #164
Fixed #163
Fixed #162
Fixed #161
Fixed #160
Fixed #159
Fixed #158
Fixed #157
Fixed #156
Fixed #155
Fixed #154
Fixed #153
Fixed #152
Fixed #151
Fixed #150
Fixed #149
Fixed #148
Fixed #147
Fixed #146

--- a/docker/rdbms/mssql/docker/windows/2019/dockerfile.CU13
+++ b/docker/rdbms/mssql/docker/windows/2019/dockerfile.CU13
@@ -22,7 +22,7 @@ COPY SQLServer2019-KB5005679-x64.exe CU
 # Install SQL Server Applying the Cummlative Update
 #
 RUN C:\INSTALL\SQLServer2019-DEV-x64-ENU\SETUP.exe /ConfigurationFile=C:\INSTALL\SQLServer2019-Config.ini; `
-    Remove-Item C:\INSTALL\CU\SQLServer2019-KB5005679-x64; `
+    Remove-Item C:\INSTALL\CU\SQLServer2019-KB5005679-x64.exe; `
 	Remove-Item C:\INSTALL\SQLServer2019-Config.ini
 #
 WORKDIR c:/
