--- a/docker/rdbms/oracle/docker/windows/21.3/dockerfile
+++ b/docker/rdbms/oracle/docker/windows/21.3/dockerfile
@@ -17,12 +17,7 @@ COPY setup.rsp $ORACLE_HOME/inventory/Scripts/
 RUN .\setup.exe -silent -responseFile %ORACLE_HOME%/inventory/Scripts/setup.rsp
 COPY dbca.rsp .
 #
-# Compress and remove diag folder. It will be restored in Start.ps1
-#
-RUN Compress-Archive -Path c:\oracle\diag  -DestinationPath c:\oracle\diag.zip; `
-    Remove-Item -Recurse c:\oracle\diag
-#
-# Defer execution of NETCA and DBCA to Start.ps1. This allows volumes and hostnames to be assigned using "Docker RUN" or "Docker-Compose"
+# Execution of NETCA and DBCA deferred to Start.ps1. This allows volumes and hostnames to be assigned using "Docker RUN" or "Docker-Compose"
 #
 WORKDIR c:/
 COPY Start.ps1 .
