--- a/src/package.json
+++ b/src/package.json
@@ -38,6 +38,7 @@
     "pg-query-stream": "^4.2.1",
     "readable-stream": "^3.6.0",
     "snowflake-sdk": "^1.6.6",
+    "teradata-nodejs-driver": "^1.0.0-rc.7",
     "uuid": "^8.0.0",
     "wkx": "^0.5.0"
   },
