export regression clean
MsSQLDBI: Provide mapping for DECIMAL_TYPE. MsSQL can use numeric and decimal as the description of  Packed Decimal columns in the Information Schema.
MySQLDBI: Map Timestamp to Timestamp for MySQL and DateTime for all other Databases. MySQL stores Timestamp as Unix Epoch and so supports a very restricted range of Timestamp values compared to other databases
PostgresDBI:  Add custom implementation of CoalesceTypeMappings to map all ID types to the OID type.

--- a/src/node/dbi/mariadb/mariadbTypeMappings.json
+++ b/src/node/dbi/mariadb/mariadbTypeMappings.json
@@ -22,7 +22,7 @@
   , "TIME_TYPE"                                            : "time"                                             
   , "DATETIME_TYPE"                                        : "datetime"                                         
   , "TIMESTAMP_TYPE"                                       : "timestamp"
-  , "MYSQL_YEAR_TYPE"                                      : "year"                                             
+  , "YEAR_TYPE"                                            : "year"                                             
                                                                                                            
   , "BOOLEAN_TYPE"                                         : "boolean"                                          
 
@@ -79,6 +79,6 @@
   }
 , "storageOptions": {
 	"SPATIAL_FORMAT"                                       : "WKB"
-  , "BOOLEAN_TYPE"                                         : "tinyint(1)"
+  , "BOOLEAN_TYPE"                                         : "bit(1)"
   }
 }
