--- a/src/node/dbi/mysql/mysqlTypeMappings.json
+++ b/src/node/dbi/mysql/mysqlTypeMappings.json
@@ -21,8 +21,8 @@
   , "DATE_TYPE"                                            : "date"                                             
   , "TIME_TYPE"                                            : "time"                                             
   , "DATETIME_TYPE"                                        : "datetime"                                         
-  , "TIMESTAMP_TYPE"                                       : "datetime"
-  , "MYSQL_YEAR_TYPE"                                      : "year"                                             
+  , "TIMESTAMP_TYPE"                                       : "timestamp"
+  , "YEAR_TYPE"                                            : "year"                                             
                                                                                                              
   , "BOOLEAN_TYPE"                                         : "boolean"                                          
                                                                                                              
@@ -78,6 +78,6 @@
   }  
 , "storageOptions": {
 	"SPATIAL_FORMAT"                                       : "WKB"
-  , "BOOLEAN_TYPE"                                         : "tinyint(1)"
+  , "BOOLEAN_TYPE"                                         : "bit(1)"
   }
 }                                                                                                              
