--- a/src/node/dbi/mssql/mssqlTypeMappings.json
+++ b/src/node/dbi/mssql/mssqlTypeMappings.json
@@ -7,7 +7,6 @@
                                                         
   , "TINYINT_TYPE"                                         : "tinyint"                                                         
   , "SMALLINT_TYPE"                                        : "smallint"                                                        
-  , "MEDIUMINT_TYPE"                                       : "mediumint"                                                       
   , "INTEGER_TYPE"                                         : "int"                                                             
   , "BIGINT_TYPE"                                          : "bigint"                                                          
   , "MSSQL_SMALLMONEY_TYPE"                                : "smallmoney"                                                      
@@ -38,7 +37,11 @@
   , "SPATIAL_TYPE"                                         : "geometry"                                                        
   , "GEOMETRY_TYPE"                                        : "geometry"                                                        
   , "GEOGRAPHY_TYPE"                                       : "geography"                                                       
-                                                                                                                           
+                                                                                   
+  , "MSSQL_TEXT_TYPE"                                      : "text"
+  , "MSSQL_NTEXT_TYPE"                                     : "ntext"
+  , "MSSQL_IMAGE_TYPE"                                     : "image"
+																				   
   , "MSSQL_ROWVERSION_TYPE"                                : "rowversion"                                                      
   , "MSSQL_HIERARCHY_ID_TYPE"                              : "hierarchyid"                                                     
   , "UUID_TYPE"                                            : "uniqueidentifier"      
