--- a/src/node/dbi/snowflake/snowflakeTypeMappings.json
+++ b/src/node/dbi/snowflake/snowflakeTypeMappings.json
@@ -11,7 +11,8 @@
   , "TIMESTAMP_TYPE"                                       :  "TIMESTAMP"                              
   , "TIMESTAMP_TZ_TYPE"                                    :  "TIMESTAMP_TZ"                              
   , "TIMESTAMP_LTZ_TYPE"                                   :  "TIMESTAMP_LTZ"                              
-  , "SFLAKE_VARINAT_TYPE"                                  :  "VARIANT"	 
+  , "SNOWFLAKE_VARIANT_TYPE"                               :  "VARIANT"	 
+  , "UNBOUNDED_NUMERIC_TYPE"                               :  "NUMBER(38,19)"
   }
 , "limits" : {
 	"SCALAR_LENGTH"                                        : 16777216
@@ -19,6 +20,7 @@
   }
 , "storageOptions": {
 	"SPATIAL_FORMAT"                                       : "WKB"
-	"XML_TYPE"                                             : "VARIANT"
+   ,"XML_TYPE"                                             : "VARIANT"
+   ,"JSON_TYPE"                                            : "VARIANT"
   }
 }
