--- a/src/node/dbi/vertica/verticaTypeMappings.json
+++ b/src/node/dbi/vertica/verticaTypeMappings.json
@@ -1,11 +1,12 @@
 {
   "mappings": {
-    "CHAR_TYPE"                                            :   "CHAR"                                                            
+    "CHAR_TYPE"                                            : "char"                                                            
   , "VARCHAR_TYPE"                                         : "varchar"                                                         
                                                                                                                          
   , "INTEGER_TYPE"                                         : "int"                                                             
   , "FLOAT_TYPE"                                           : "float"                                                           
   , "NUMERIC_TYPE"                                         : "numeric"                                                          
+  , "UNBOUNDED_NUMERIC_TYPE"                               : "numeric(1024,512)"
                                                                                                                          
   , "BOOLEAN_TYPE"                                         : "boolean"                                                         
                                                                                                                          
@@ -37,6 +38,7 @@
     "SCALAR_LENGTH"                                        : 65000
   , "LOB_LENGTH"                                           : 32000000
   , "NUMERIC_PRECISION"                                    : 1024
+  , "NUMERIC_SCALE"                                        : 1024
   , "TIMESTAMP_PRECISION"                                  : 6
   , "ROW_SIZE"                                             : 32768000
   , "DEFAULT_SPATIAL_LENGTH"                               : 1050000
