Upgrade Vertica and Snowflake to Table Driven Type Mappings
Clean dbRoundtrip.sh regression

--- a/src/node/dbi/cfg/dataTypeConfiguration.json
+++ b/src/node/dbi/cfg/dataTypeConfiguration.json
@@ -34,5 +34,9 @@
 	"Teradata": {
 	  "class" : "../teradata/teradataDataTypes.js"
 	, "file": "src/node/dbi/teradata/teradataTypeMappings.json"
+	},
+	"Redshift": {
+	  "class" : "../redshift/redshiftDataTypes.js"
+	, "file": "src/node/dbi/redshift/redshiftTypeMappings.json"
 	}
 }
