Complete Coding conversion to Table Driven Data Type
Refactor Data Type length information as JSON Array. Empty Array for unbounded, Length 1 is simple types (CHAR, VARCHAR etc) Length 2 = Precision and Scale or Timestamp Interval with multiple lengths specified

--- a/src/node/dbi/mssql/mssqlTypeMappings.json
+++ b/src/node/dbi/mssql/mssqlTypeMappings.json
@@ -52,6 +52,7 @@
     "SCALAR_LENGTH"                                        : 4000
   , "NUMERIC_PRECISION"                                    : 38
   , "NUMERIC_SCALE"                                        : 38
+  , "TIMESTAMP_PRECISION"                                  : 7
   }
 , "storageOptions": {
 	"SPATIAL_FORMAT"                                       : "WKB"
