Improved Float/Double Support. Added DB2 Support
Fixed #178
Fixed #179
Fixed #180
Fixed #181
Fixed #182
Fixed #183
Fixed #184
Fixed #185
Fixed #186
Fixed #187

--- a/src/node/dbi/cfg/dataTypeConfiguration.json
+++ b/src/node/dbi/cfg/dataTypeConfiguration.json
@@ -46,6 +46,9 @@
 	"Yugabyte": {
 	  "class" : "../postgres/postgresDataTypes.js"
 	, "file": "src/node/dbi/yugabyte/yugabyteTypeMappings.json"
+	},
+	"Cockroach": {
+	  "class" : "../postgres/postgresDataTypes.js"
+	, "file": "src/node/dbi/postgres/postgresTypeMappings.json"
 	}
-
 }
