Support spatial data in Postgres when PostGIS not present.
Fixed #191
Fixed #190
Fixed #189
Fixed #188

--- a/src/node/dbi/postgres/postgresTypeMappings.json
+++ b/src/node/dbi/postgres/postgresTypeMappings.json
@@ -86,7 +86,7 @@
   , "PGSQL_REFCURSOR"                                      : "refcursor"       
    
   , "MONGO_OBJECTID_TYPE"                                  : "bytea"
-  , "UNBOUNDED_NUMERIC_TYPE"                               : "numeric"
+  , "UNBOUNDED_NUMERIC_TYPE"                               : "select"
   }
 , "limits": {
     "SCALAR_LENGTH"                                        : 10485760
